--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -14,8 +14,8 @@
               <p class="jobDesc">{{JobPost.jobDescription | slice:0:220 }}</p>
             </div>
             <div class="col-4">
-              <button class="rejectbtn" data-bs-toggle="modal" data-bs-target="#exampleModal">Reject</button>
-              <button class="viewJobbtn">Accept Offer</button>
+              <button class="rejectbtn" data-bs-toggle="modal" data-bs-target="#rejectmodel">Reject</button>
+              <button class="viewJobbtn" data-bs-toggle="modal" data-bs-target="#acceptoffer" (click)="ApplyModal(JobPost)">Accept Offer</button>
             </div>
             <div class="row">
               <div class="col-8">
@@ -34,8 +34,57 @@
 </div>
 
 
-
-<div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade "    id="acceptoffer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="    --bs-modal-width: 1020px">
+  <div class="modal-dialog modal-dialog-centered" >
+    <div class="modal-content "*ngIf="selectedhire" style="padding-bottom: 27px;">
+     
+      <div class="modal-header " style="border-bottom: none;     padding: 20px 25px 12px 25px">
+        <p class="rejecttxt">{{selectedhire.jobTitle}}</p>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" style="padding: 20px 100px 12px 100px">
+       
+        <div class="container">
+          <div class="row rate1">
+            <div class="col-8">
+<p class="rejecttxt1">Your Rate</p>
+        </div>
+        <div class="col-4">
+          <p class="rejecttxt2">{{selectedhire.biddingRate}}</p>
+          </div>
+      
+      </div>
+      </div>
+<br>
+      <div class="container">
+        <div class="row rate1">
+          <div class="col-8">
+            <p class="rejecttxt1">2% Platform Fee</p>
+            </div>
+            <div class="col-4">
+              <p class="rejecttxt2">{{ selectedhire.biddingRate * 0.04}}</p>
+            </div>
+            </div>
+            </div>
+            <br>
+            <div class="container ">
+              <div class="row rate1" >
+                <div class="col-8">
+                  <p class="rejecttxt1">Payment You’ll get after tax</p>
+                  </div>
+                  <div class="col-4">
+                    <p class="rejecttxt2">{{ selectedhire.biddingRate - (selectedhire.biddingRate * 0.04) }}</p>
+                  </div>
+                  </div>
+                  </div>
+        <div  style="margin-top: 26px;">
+          <button class="rejectconfirm1">Accept Offer</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade " id="rejectmodel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content " style="padding-bottom: 27px;">
       <div class="modal-header " style="border-bottom: none;">
