--- a/src/app/modules/authprofile/authprofile.component.html
+++ b/src/app/modules/authprofile/authprofile.component.html
@@ -21,7 +21,7 @@
                     profile will land you more jobs</p>
                     <p class="prodes" *ngIf="calculateTotal() === 30 "> Great! You get started now</p>
                         <p class="prodes" *ngIf="calculateTotal() ===    65">Your are Now Finish</p>
-                    <p class="prodes" *ngIf="calculateTotal() === 100">asdbsadbhsabdhbdhasdbh</p>
+                    <p class="prodes" *ngIf="calculateTotal() === 100">Congratulations! You did it! Keep shining bright!</p>
             </div>
             <div class="col-1">
                 <div class="line"></div>
