--- a/src/app/modules/ongoing-jobs/ongoing-jobs.component.html
+++ b/src/app/modules/ongoing-jobs/ongoing-jobs.component.html
@@ -10,7 +10,7 @@
             No jobs in progress are available for you!
           </div>
           <div *ngFor="let Apply of  Applies;">
-            <div class="row" style="margin-top: 17px;" *ngIf="Apply.status === 'progress'">
+            <div class="row" style="margin-top: 17px;" *ngIf="Apply.status === 'progress'  && Apply.userId === currentUser[0].id">
               <div class="col-8">
                 <p class="jobtitle">{{Apply.jobTitle}}</p>
               </div>
