--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -8,7 +8,7 @@
           No offers are available for you!
         </div>
         <div *ngFor="let JobPost of  Applies;">
-          <div class="row" style="margin-top: 17px;" *ngIf="JobPost.status === 'offers'">
+          <div class="row" style="margin-top: 17px;" *ngIf="JobPost.status === 'offers' && JobPost.userId === currentUser[0].id">
             <div class="col-8">
               <p class="jobtitle">{{JobPost.jobTitle}}</p>
               <p class="jobDesc">{{JobPost.jobDescription | slice:0:220 }}</p>
