--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -25,9 +25,9 @@
             </button>
             <ul class="dropdown-menu listd" aria-labelledby="dropdownMenuButton1">
               <!-- <li><a class="dropdown-item ddis">Post a New Job</a></li><br> -->
-              <li><a class="dropdown-item ddis" routerLink="/authors/accept-a-request" >My Jobs</a></li><br>
-              <li><a class="dropdown-item ddis"  routerLink="/authors/on-going-jobs">Ongoing Jobs</a></li><br>
-              <li><a class="dropdown-item ddis">Completed Jobs</a></li><br>
+              <li routerLink="/authors/accept-a-request" ><a class="dropdown-item ddis" >My Jobs</a></li><br>
+              <li  routerLink="/authors/on-going-jobs"><a class="dropdown-item ddis" >Ongoing Jobs</a></li><br>
+              <li  routerLink="/authors/completed-jobs"><a class="dropdown-item ddis" >Completed Jobs</a></li><br>
             </ul>
           </div>
           <div class="dropdown">
