--- a/src/app/modules/authors-ongoing-jobs/authors-ongoing-jobs.component.scss
+++ b/src/app/modules/authors-ongoing-jobs/authors-ongoing-jobs.component.scss
@@ -191,6 +191,18 @@ font-size: 17px;
     line-height: 36px;
 }
 
+.recenvv12 {
+    color: #000;
+    font-family: League Spartan;
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 500;
+    padding-left: 70px;
+    padding-bottom: 8px;
+    margin-top: 40px;
+}
+
+
 .svgbutt11 {
     margin-top: 26%;
     float: right;
