--- a/src/app/modules/freelancernav/freelancernav.component.html
+++ b/src/app/modules/freelancernav/freelancernav.component.html
@@ -35,7 +35,7 @@
               <!-- <p class="opth">Explore the world of publishing</p> -->
               <p class="opth"></p>
             </a></li>
-            <li><a class="dropdown-item ddis" routerLink="/freelancers/job-offers">pending Offers<br>
+            <li><a class="dropdown-item ddis" routerLink="/freelancers/job-offers">Pending Offers<br>
               <!-- <p class="opth">We help to start your journey in publishing</p> -->
               <p class="opth"></p>
             </a></li>
