--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,3 +1,6 @@
+
+
+
 @media only screen and (min-width:1201px) {
 
 
@@ -65,7 +68,6 @@
     font-size: 42px;
     font-style: normal;
     font-weight: 600;
-    margin-top: 68px;
   }
 
   .kklaptxt1 {
@@ -163,7 +165,6 @@
     font-size: 36px;
     font-style: normal;
     font-weight: 800;
-    margin-top: 50px;
   }
 
   .kklaptxt1 {
@@ -236,6 +237,7 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
+    cursor: pointer;
     line-height: normal;
     margin-right: 20px;
 
