--- a/src/app/modules/job-post/job-post.component.html
+++ b/src/app/modules/job-post/job-post.component.html
@@ -396,16 +396,14 @@
                 <img src="../assets/logo.png" alt="Job a post Now">
             </div>
             <div class="col-9">
-
             </div>
         </div>
-
     </div>
 
     <div class="container">
         <p class="cat">5/5,Rate</p>
         <p class="head">Please add your budget</p>
-        <p class="rate">Select the Rate Basis</p>
+        <p class="rate">Select the Rate Basis with your Currency</p>
         <select required class="kkin1" [(ngModel)]="selectedRate" name="rateBasis" #rateBasis="ngModel"
             [(ngModel)]="jobservice.jobData.rateBasis">
             <option class="kkin1">Hourly</option>
