--- a/src/app/modules/profiledetails/profiledetails.component.html
+++ b/src/app/modules/profiledetails/profiledetails.component.html
@@ -957,9 +957,9 @@
             <input type="hidden" [value]="selectedSkills.join(', ')" ngModel name="description" #description="ngModel"
               [(ngModel)]="User[0].description" />
             <p class="whatskilled">What are the skills you are looking for?</p>
-            <div style="position: relative;"> <input type="text" class="intsearchauth" placeholder="Enter the skillset">
+            <!-- <div style="position: relative;"> <input type="text" class="intsearchauth" placeholder="Enter the skillset">
               <img src="../assets/auth_search outline_.png" class="authsearchimg" alt="authsearchimg">
-            </div>
+            </div> -->
 
             <div class="row mt-4">
               <p class="popskill">Selected and Popular skills</p>
