--- a/src/app/modules/authors-completed-jobs/authors-completed-jobs.component.html
+++ b/src/app/modules/authors-completed-jobs/authors-completed-jobs.component.html
@@ -1,16 +1,16 @@
-<app-freelancernav></app-freelancernav>
+<app-author-nav></app-author-nav>
 <br><br>
 <div>
   <div class="container">
-    <p class="applyhead">Ongoing Jobs</p>
+    <p class="applyhead">Completed Jobs</p>
     <div class="row ">
       <div class="col-12">
         <div class="appliedborder">
           <div *ngIf="!anyJobInProgress()" class="jobtitle">
-            No jobs in progress are available for you!
+            No completed jobs are available for you!
           </div>
-          <div *ngFor="let Apply of  Applies;">
-            <div class="row" style="margin-top: 17px;" *ngIf=" Apply.userId === currentUser[0].id && Apply.status === 'accepted'">
+          <div *ngFor="let Apply of  jobPosts;">
+            <div class="row" style="margin-top: 17px;" *ngIf="Apply.status === 'completed' && Apply.userId === currentUser[0].id" >
               <div class="col-8">
                 <p class="jobtitle">{{Apply.jobTitle}}</p>
               </div>
@@ -18,7 +18,7 @@
                 <p class="aboutjob">Rate: <span style="color: black;">₹ 2000</span></p>
               </div>
               <div class="col-8">
-                <p class="postedname">posted by <span style="color: #A426D1;">{{Apply.postBy}}</span></p>
+                <p class="postedname">posted by <span style="color: #A426D1;">Mr. John Doe</span></p>
               </div>
               <div class="col-4">
                 <button class="viewJobbtn" (click)="showJobDetails(Apply.jobUniqueId)">View</button>
