--- a/src/app/modules/footertag/footertag.component.html
+++ b/src/app/modules/footertag/footertag.component.html
@@ -3,7 +3,7 @@
     <div class="container rrheaderalign">
       <div class="row">
         <div class="col-xl-6 col-lg-5">
-          <img src="./assets/logo.png" class="rrlogoimg">
+          <img src="./assets/logo.png" class="rrlogoimg" routerLink="/">
         </div>
         <div class="col-xl-6 col-lg-7">
           <div class="rrpubkincenteralign1  d-flex  rrpubkinheadalign1" style="margin-top: 22px; float: right;">
@@ -18,7 +18,7 @@
     </div>
   
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10">
