--- a/src/app/modules/authors/authors.component.html
+++ b/src/app/modules/authors/authors.component.html
@@ -40,7 +40,7 @@
               <p class="kkprtag2">Lorem ipsum dolor sit amet consectetur. Cursus nisi mauris rhoncus tortor.</p>
             </div>
             <div class="rrcomcenalign1">
-              <button class="btn kkprbtn1" routerLink="/post-a-job">Post A Job</button>
+              <button class="btn kkprbtn1" [disabled]="calculateTotal() < 85" routerLink="/post-a-job">Post A Job</button>
             </div>
           </div>
         </div>
@@ -123,9 +123,9 @@
             <p class="rrkkhrtxt">₹1400hr</p>
 
           </div>
-          <div class="rrcomcenalign1">
+          <!-- <div class="rrcomcenalign1">
             <button class="btn rrkkprsmb">See More</button>
-          </div>
+          </div> -->
         </div>
       </div>
       
@@ -157,9 +157,9 @@
               <p class="rrkkhrtxt">₹1400hr</p>
 
             </div>
-            <div class="rrcomcenalign1">
+            <!-- <div class="rrcomcenalign1">
               <button class="btn rrkkprsmb">See More</button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -191,9 +191,9 @@
               <p class="rrkkhrtxt">₹2430hr</p>
 
             </div>
-            <div class="rrcomcenalign1">
+            <!-- <div class="rrcomcenalign1">
               <button class="btn rrkkprsmb">See More</button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -225,9 +225,9 @@
               <p class="rrkkhrtxt">₹3400hr</p>
 
             </div>
-            <div class="rrcomcenalign1">
+            <!-- <div class="rrcomcenalign1">
               <button class="btn rrkkprsmb">See More</button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -259,9 +259,9 @@
               <p class="rrkkhrtxt">₹1700hr</p>
   
             </div>
-            <div class="rrcomcenalign1">
+            <!-- <div class="rrcomcenalign1">
               <button class="btn rrkkprsmb">See More</button>
-            </div>
+            </div> -->
           </div>
         </div>
         
@@ -293,9 +293,9 @@
                 <p class="rrkkhrtxt">₹1450hr</p>
   
               </div>
-              <div class="rrcomcenalign1">
+              <!-- <div class="rrcomcenalign1">
                 <button class="btn rrkkprsmb">See More</button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -327,9 +327,9 @@
                 <p class="rrkkhrtxt">₹1400hr</p>
   
               </div>
-              <div class="rrcomcenalign1">
+              <!-- <div class="rrcomcenalign1">
                 <button class="btn rrkkprsmb">See More</button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -361,9 +361,9 @@
                 <p class="rrkkhrtxt">₹1400hr</p>
   
               </div>
-              <div class="rrcomcenalign1">
+              <!-- <div class="rrcomcenalign1">
                 <button class="btn rrkkprsmb">See More</button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
