--- a/src/app/modules/job-details/job-details.component.html
+++ b/src/app/modules/job-details/job-details.component.html
@@ -77,7 +77,7 @@
         </div>
         <div class="col-4 kkjbdetlis1 text-center" >
          <button class="btn kkjbdtbtn2"  data-bs-toggle="modal" data-bs-target="#savejob1">Save Job</button>
-         <button class="btn kkjbdtbtn1"  [disabled]="Freelancers[0].ProfilePercentage <= 79" (click)="showApplyNow(jobPost.jobUniqueId)">Apply Now</button>
+         <button class="btn kkjbdtbtn1"  [disabled]="calculateTotal() < 85" (click)="showApplyNow(jobPost.jobUniqueId)">Apply Now</button>
           <!-- <p class="kkremprtxt">Remaining proposal: 5</p> -->
           <hr class="kkline2">
           <div class="container kkdivjbr2">
